syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "AdminServiceProto";

// Ledger service
service AdminService {
  // Approve request
  rpc ApproveRequestToJoin(ApproveRequestToJoinRequest) returns (ApproveRequestToJoinResponse);

  // Admin: Suspend user account
  rpc AdminBlockUserAccount(AdminBlockUserAccountRequest) returns (AdminBlockUserAccountResponse);

  // Admin: List all members of an organization
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);

  // Admin: Search users within an organization
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);

  // Admin: List pending join requests
  rpc ListJoinRequests(ListJoinRequestsRequest) returns (ListJoinRequestsResponse);


  // Admin: Reject pending join request
  rpc RejectRequestToJoin(RejectRequestToJoinRequest) returns (RejectRequestToJoinResponse);

  // Admin: Send invitation to join organization
  rpc SendInvitation(SendInvitationRequest) returns (SendInvitationResponse);

  // Admin: Get detailed profile of a member
  rpc GetMemberProfile(GetMemberProfileRequest) returns (GetMemberProfileResponse);
}

message ApproveRequestToJoinRequest {
  int32 organization_id = 1;
  int32 join_request_id = 2; // Added request_id to link to the specific join request
}

message ApproveRequestToJoinResponse {
  bool success = 1;
  string message = 2;
  string invitation_code = 3; // Only populated when invitation is sent to new user
}

message AdminBlockUserAccountRequest {
  int32 blocked_user_id = 1;
  int32 organization_id = 2;
  bool block_renting = 3;
  bool block_lending = 4;
  string reason = 5;
}

message AdminBlockUserAccountResponse {
  bool success = 1;
  string error_message = 2;
}

message ListMembersRequest {
  int32 organization_id = 1;
}

message ListMembersResponse {
  repeated MemberProfile members = 1;
}

message SearchUsersRequest {
  int32 organization_id = 1;
  string query = 2;
}

message SearchUsersResponse {
  repeated MemberProfile users = 1;
}

message ListJoinRequestsRequest {
  int32 organization_id = 1;
}

message ListJoinRequestsResponse {
  repeated JoinRequestProfile requests = 1;
}

message JoinRequestProfile {
  int32 request_id = 1;
  int32 user_id = 2; // Added user_id
  string name = 3;
  string email = 4;
  string message = 5;
  string request_date = 6;
  string used_on = 7; // Date when invitation code was used (YYYY-MM-DD), empty if not used
  string status = 8; // PENDING, INVITED, JOINED, REJECTED
  string reason = 9; // Rejection reason (populated when status=REJECTED)
  string rejected_by = 10; // Name/email of admin who rejected (populated when status=REJECTED)
}

message RejectRequestToJoinRequest {
  int32 organization_id = 1;
  int32 join_request_id = 2;
  string reason = 3;
}

message RejectRequestToJoinResponse {
  bool success = 1;
  string message = 2;
}

message SendInvitationRequest {
  int32 organization_id = 1;
  string email = 2;
  string name = 3;
}

message SendInvitationResponse {
  bool success = 1;
  string message = 2;
  string invitation_code = 3;
}

message GetMemberProfileRequest {
  int32 organization_id = 1;
  int32 user_id = 2;
}

message GetMemberProfileResponse {
  MemberProfile profile = 1;
}

message MemberProfile {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  int32 balance_cents = 4;
  string member_since = 5;
  bool is_blocked = 6; // Computed: true if (renting_blocked OR lending_blocked)
  string block_reason = 7;
  // string about = 8; // Removed as not in DB
  string phone = 9;
  string role = 10; // ADMIN, MEMBER
  string avatar_url = 11;
  bool renting_blocked = 12;
  bool lending_blocked = 13;
  string blocked_on = 14;
  string status = 15; // ACTIVE, SUSPEND, BLOCK from users_orgs
}
